<resources>
    <string name="app_name">CRM</string>
    <string name="exit">再按一次退出程序</string>
    <string name="exit_str">确定要退出吗？</string>
    <string name="copyright">版权所有</string>
    <string name="agreement_title">服务协议</string>
    <string name="query">查询</string>
    <string name="msg">消息</string>
    <string name="setting">设置</string>
    <string name="my">我的</string>
    <string name="menu_share">分享</string>
    <string name="more">更多</string>
    <string name="goods_comment">商品评论</string>
    <string name="my_customer">我的客户</string>
    <string name="public_customer">公海客户</string>
    <string name="filter">筛选</string>
    <string name="level">等级</string>
    <string name="type">类型</string>
    <string name="is_deal">是否成交</string>
    <string name="status">状态</string>
    <string name="customer_basic_info">客户基本信息</string>
    <string name="add_customer">添加客户</string>
    <string name="customer_mphone">客户手机</string>
    <string name="customer_telephone">客户电话</string>
    <string name="customer_job_position">公司职位</string>
    <string name="qq">QQ</string>
    <string name="customer_email">客户邮箱</string>
    <string name="customer_type">客户类型</string>
    <string name="company_basic_info">公司基本信息</string>
    <string name="company_name_tag">公司名称</string>
    <string name="company_address">公司地址</string>
    <string name="company_type">公司类型</string>
    <string name="main_product">主营产品</string>
    <string name="customer_level">客户等级</string>
    <string name="province_city">省份地市</string>
    <string name="company_net">公司网站</string>
    <string name="inbound_channel">进货渠道</string>
    <string name="settlement_basic_info">交易基本信息</string>
    <string name="pre_buy_product">预购品种</string>
    <string name="producing_area">产地</string>
    <string name="standard">规格</string>
    <string name="number">数量</string>
    <string name="settlement_type">结算方式</string>
    <string name="customer_account">客户账号</string>
    <string name="is_has_log">是否有交易记录</string>
    <string name="last_settlement_time">最新交易时间</string>
    <string name="remark">备注</string>
    <string name="loading">加载&#8230;</string>
    <string name="loading_hint">正在加载中...</string>
    <string name="loading_err">抱歉，数据加载失败，请点击重新加载</string>
    <string name="loading_suc">数据加载成功</string>
    <string name="prompt">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="num_digits">0123456789</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="del">删除</string>
    <string name="confirm_submit">确认提交</string>
    <string name="activity">活动</string>
    <string name="person">个人</string>
    <string name="main_page">首页</string>
    <string name="my_appointment">我的提醒</string>
    <string name="appointment_detail">提醒详情</string>
    <string name="appointment_already_complete">已完成</string>
    <string name="business_type">业务类型</string>
    <string name="content_description">内容描述</string>
    <string name="appointment_time">提醒时间</string>
    <string name="customer_name">客户姓名</string>
    <string name="customer_phone">客户联系方式</string>
    <string name="sms_platform">短信平台</string>
    <string name="sms_template">短信模板</string>
    <string name="sms_send">短信发送</string>
    <string name="send">发送</string>
    <string name="user_name">姓名:</string>
    <string name="user_phone">手机:</string>
    <string name="company_name">公司:</string>
    <string name="sms_content">短信内容:</string>
    <string name="template_select">模板选择</string>
    <string name="sms_see">查看短信</string>
    <string name="sms_title">短信名称</string>
    <string name="area_select">选择地区</string>
    <string name="date_select">选择日期</string>
    <string name="login_emptyname_or_emptypwd">用户名或密码为空，请重新输入</string>
    <string name="login">登录</string>
    <string name="login_anonymous">匿名登录</string>
    <string name="login_fast">快速登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="phone">手机</string>
    <string name="pwd">密码</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="login_successful">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register_suc">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="modify_pwd_suc">修改密码成功</string>
    <string name="modify_pwd_fail">修改密码失败</string>
    <string name="register_emptyname_or_emptypwd">请正确填写注册信息</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_psw_hint">请输入密码</string>
    <string name="user_confirm_psw_hint">请再次输入密码</string>
    <string name="user_confirm_psw_no_same_hint">两次密码需一致！</string>
    <string name="mobile_phone_hint">请填写手机号码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code_hint">请输入正确的验证码</string>
    <string name="my_account">我的账户</string>
    <string name="weibo_login">微博登陆</string>
    <string name="qq_login">QQ登陆</string>
    <string name="wechat_login">微信登陆</string>
    <string name="add_address">新建地址</string>
    <string name="delivery_address">收货地址</string>
    <string name="real_name_auth">实名认证</string>
    <string name="my_integral">我的积分</string>
    <string name="account_remaining_money">账户余额</string>
    <string name="can_use_remaining_money">可用余额</string>
    <string name="bmcard_money">旺卡金额</string>
    <string name="recharge_to_bmcard_remaining_money">充值到旺卡余额</string>
    <string name="my_collection">我的收藏</string>
    <string name="confirm_order">确认订单</string>
    <string name="real_order_amount_money">实付款</string>
    <string name="collection">收藏</string>
    <string name="collection_goods">收藏的商品</string>
    <string name="attention_brand">关注的品牌</string>
    <string name="browsing_history">浏览记录</string>
    <string name="my_property">我的资产</string>
    <string name="view_all_property">查看全部资产</string>
    <string name="modify_head_portrait">修改头像</string>
    <string name="add_photo">添加照片</string>
    <string name="cart">购物车</string>
    <string name="real_name">真实姓名:</string>
    <string name="id_card">身份证号:</string>
    <string name="real_name_hint">请输入真实姓名</string>
    <string name="id_card_hint">请输入身份证号</string>
    <string name="real_name_id_card_hint">请输入真实姓名和身份证号</string>
    <string name="must_star">*</string>
    <string name="upload_id_card">请上传身份证正反两面</string>
    <string name="upload_id_one_hint">海关需对海外购物查验身份信息，信息错误可能导致无法通关。</string>
    <string name="upload_id_two_hint">身份信息将加密报关，旺铺将保证您的信息安全。</string>
    <string name="add_cart">加入购物车</string>
    <string name="now_buy">立即购买</string>
    <string name="pay_type">支付方式</string>
    <string name="checkstand">收银台</string>
    <string name="pay_on_delivery">货到付款</string>
    <string name="pay_on_delivery_brief">送货上门后付款，支持现金、刷卡</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_online_brief">支持银联卡及第三方支付平台</string>
    <string name="pay_confirm">确认支付</string>
    <string name="pay_in_cash">现金支付</string>
    <string name="pay_in_pos">POS机刷卡</string>
    <string name="alipay">支付宝</string>
    <string name="alipay_hint">支付宝安全支付</string>
    <string name="wechat">微信</string>
    <string name="unionpay">银联</string>
    <string name="unionpay_hint">银联高效支付</string>
    <string name="pay_suc">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_way_hint">请选择支付方式</string>
    <string name="buy">购买</string>
    <string name="bmcard">旺卡</string>
    <string name="bmcard_pwd">旺卡密码</string>
    <string name="bmcard_hint">请输入旺卡密码</string>
    <string name="remaining_money">余额</string>
    <string name="remaining_money_can_use">可用余额</string>
    <string name="remark_hint">请输入订单备注</string>
    <string name="please_pay">请支付</string>
    <string name="please_select_way">请选择支付方式</string>
    <string name="goods_money">商品金额</string>
    <string name="freight_money">运费</string>
    <string name="post_tax">行邮税</string>
    <string name="goods_parameters">商品参数</string>
    <string name="goods_detail">商品详情</string>
    <string name="good_comment">好评</string>
    <string name="authentic_guarantee">正品保障</string>
    <string name="all_transparent">全程透明</string>
    <string name="sevice_good">售后无忧</string>
    <string name="see_more">查看更多</string>
    <string name="up_push_see_detail">上拉查看图文详情</string>
    <string name="shopping_cart">购物车</string>
    <string name="cart_no_hint">有好多商品等着亲来选购哟</string>
    <string name="select_all">全选</string>
    <string name="settlement">结算</string>
    <string name="total_price">总金额：</string>
    <string name="to_settlement">去结算</string>
    <string name="cart_add_suc">加入购物车成功！</string>
    <string name="cart_add_fail">加入购物车失败！</string>
    <string name="cart_add_num_no_hint">购物车商品总数为0，请将商品添加进购物车</string>
    <string name="editor">编辑</string>
    <string name="complete">完成</string>
    <string name="see_after_login">登陆后查看</string>
    <string name="set_head">上传图片</string>
    <string name="from_camera">照相</string>
    <string name="from_album">从相册中选择</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="header_hint_refresh_normal">下拉更新</string>
    <string name="header_hint_refresh_ready">释放更新</string>
    <string name="header_hint_refresh_loading">更新中&#8230;</string>
    <string name="header_hint_refresh_time">时间：</string>
    <string name="footer_hint_load_normal">加载中...</string>
    <string name="footer_hint_load_ready">加载更多</string>
    <string name="footer_toast">显示下25条</string>
    <string name="my_order">我的订单</string>
    <string name="viewa_all_orders">查看全部订单</string>
    <string name="order_list">订单列表</string>
    <string name="order_all">全部订单</string>
    <string name="order_unpay">待付款</string>
    <string name="order_uncomment">待评价</string>
    <string name="order_undelivery">待收货</string>
    <string name="order_state">订单状态</string>
    <string name="delivery">配送</string>
    <string name="take_goods">收货</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_continue_pay">继续支付</string>
    <string name="order_view">查看订单</string>
    <string name="order_del">删除订单</string>
    <string name="add_comment">追加评论</string>
    <string name="place_order_suc">下单成功</string>
    <string name="began_delivery">开始配送</string>
    <string name="confirm_goods">确认收货</string>
    <string name="qr_go_on">继续扫码</string>
    <string name="order_comment">订单评价</string>
    <string name="identification_qr">扫码鉴定</string>
    <string name="order_cancel_suc">订单取消成功</string>
    <string name="order_cancel_fail">订单取消失败</string>
    <string name="order_cancel_confirm">确定取消订单？</string>
    <string name="order_cancel_no">订单已经配送，不能取消！</string>
    <string name="search">搜索 </string>
    <string name="search_hint"> 请输入商品名称</string>
    <string name="search_thing">请输入您想要的物品名称</string>
    <string name="search_history">历史搜索</string>
    <string name="find_goods">为您找到以下商品</string>
    <string name="composite">综合 </string>
    <string name="price">价格 </string>
    <string name="sales">销量 </string>
    <string name="address_hint">请填写地址信息</string>
    <string name="address_add">新增地址</string>
    <string name="address_add_suc">新增地址成功</string>
    <string name="address_update_suc">修改地址成功</string>
    <string name="consignee">收货人</string>
    <string name="contact_way">联系方式</string>
    <string name="area">所在地区</string>
    <string name="address_detail">详细地址</string>
    <string name="address_manage">地址管理</string>
    <string name="consignee_hint">请输入收货人姓名</string>
    <string name="contact_way_hint">请输入收货人手机号</string>
    <string name="consignee_edit">编辑收货人</string>
    <string name="area_hint">请点击选择省市区</string>
    <string name="address_detail_hint">请输入详细地址</string>
    <string name="delivery_way">配送方式</string>
    <string name="delivery_stand">标准快递</string>
</resources>