<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_title_bg"
        android:orientation="horizontal"
        android:padding="5dip">

        <ImageView
            android:id="@+id/appointment_list_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/back_selector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sms_see"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/sms_detail_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="30dp"
        android:text="@string/business_type"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"/>

    <TextView
        android:id="@+id/sms_detail_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:text="@string/more"
        android:textColor="@color/black"
        android:textSize="@dimen/middle_text_size"/>
</LinearLayout>