<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bg"
        android:orientation="horizontal"
        android:padding="10dip">

        <ImageView
            android:id="@+id/sms_send_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/back_selector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sms_send"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sms_send_select_customer_tag_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/customer_select"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>

        <TextView
            android:id="@+id/sms_send_select_customer_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg_blue_all"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/customer_select"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>

        <TextView
            android:id="@+id/sms_send_user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/user_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>

        <TextView
            android:id="@+id/sms_send_user_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>

        <TextView
            android:id="@+id/sms_send_company_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/sms_content"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>

        <EditText
            android:id="@+id/sms_send_content_et"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/corners_bg_gray"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sms_send_select_tag_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/template_select"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text_size"/>

        <TextView
            android:id="@+id/sms_send_select_template_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/corners_bg_blue_all"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/template_select"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"/>
    </LinearLayout>


    <Button
        android:id="@+id/sms_send_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dip"
        android:layout_marginRight="100dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/corners_bg_blue_all"
        android:gravity="center"
        android:paddingBottom="6dip"
        android:paddingTop="6dip"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>